--- a/index.html
+++ b/index.html
@@ -3,14 +3,19 @@
     <head>
         <meta charset="utf-8"> 
         <title>Brutalist Websites</title>
-        <link href="style.css"></link>
+        <link rel="stylesheet" href="style.css"></link>
     </head>
 
     <body>
-        <h1>Brutalist Websites</h1>
-        <h2></h2>
-        <h3>In its ruggedness and lack of concern to look comfortable or easy, Brutalism can be seen as a reaction
-        by a younger generation to the lightness, optimism, and frivolity of today's web design.</h3>
-        <a href="https://brutalistwebsites.com/raw/"> <img src="https://brutalistwebsites.com/_img/raw.jpg" width="400" height="400" align="right" alt="RAW Magazine"></img></a>
+        <h1>Odin Recipes</h1>
+        <h2> About Us
+            Who We Are</h2>
+        <p class="Aboutus">Home cooks are our heroes—it's as simple as that. Allrecipes is a community built by and for kitchen experts: The cooks who will dedicate the weekend to a perfect beef bourguignon but love the simplicity of a slow-cooker rendition, too. The bakers who labor over a showstopping 9-layer cake but will just as happily doctor boxed brownies for a decadent weeknight dessert. The entertainers who just want a solid snack spread, without tons of dirty dishes at the end of the night.
+            Most importantly, Allrecipes connects home cooks with their greatest sources of inspiration — other home cooks. We're the world's leading digital food brand, and that inspires us to do everything possible to keep our community connected. Sixty-million home cooks deserve no less.</p>
+        <ul>
+            <li><p>Italian Chicken Marinade . <p class="click">for more info CLICK ON photo</p> </p><a href="ItalianChickenMarinade.html"> <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fstatic.onecms.io%2Fwp-content%2Fuploads%2Fsites%2F43%2F2022%2F07%2F09%2F665982-italian-chicken-marinade-wannabe-chefette-4x3-1.jpg&q=60&c=sc&orient=true&poi=auto&h=512" hight="300" width="300"></img></a></li>
+            <li><p>Marinated-Grilled-Pork-Tenderloin .<p class="click">for more info CLICK ON photo</p></p><a href="MarinatedGrilledPorkTenderloin.html" ><img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fstatic.onecms.io%2Fwp-content%2Fuploads%2Fsites%2F43%2F2022%2F07%2F27%2F4488832-marinated-grilled-pork-tenderloin-Karen-Dean-Covington-4x3-1.jpg&q=60&c=sc&orient=true&poi=auto&h=512" height="300" width="300"></img></a> </li>
+        </ul>
     </body>
+
 </html>
